# Atlas

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs  justfile
.github/workflows/: release.yml
docs/: release_checklist.md
msi-package/: .gitignore  MsiPackage.wixproj  Package.wxs
packaging/manifests/j/JakobHellermann/Atlas/1.2.0.0/: JakobHellermann.Atlas.installer.yaml  JakobHellermann.Atlas.locale.en-US.yaml  JakobHellermann.Atlas.yaml
packaging/msi/: MsiPackage.wixproj  Package.wxs
packaging/pacman/: .gitignore  PKGBUILD  atlas.desktop
src/: filtered_recordings.rs  main.rs  record_tas.rs  render.rs  settings.rs
src/recordings/: filtered_recordings.rs  mod.rs  watcher.rs
ui/: recordings_table.slint  tas_recording.slint  ui.slint
ui/assets/icon/: gen_icon.sh
ui/components/: record_tas.slint  recordings_list.slint  render_settings.slint  tas_recording.slint
ui/widgets/: widgets.slint
