[package]
name = "atlas"
description = "Render and visualize paths for Celeste TASes"
version = "1.0.0"
edition = "2021"

[dependencies]
celesteloader = "0.1"
celesterender = "0.1"
celestedebugrc = "0.1"
annotate_celeste_map = "0.1"

slint = { version = "1.5", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
rfd = { version = "0.14.0", default-features = false, features = ["gtk3"] }
opener = "0.6.1"

anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.2"
chrono = { version = "0.4", features = [] }
once_cell = "1.19"
notify-debouncer-full = { version = "0.3", default-features = false }

[build-dependencies]
slint-build = "1.5.0"

[profile.dev.package."*"]
opt-level = 2
