[package]
name = "atlas"
description = "Render and visualize paths for Celeste TASes"
version = "1.0.0"
edition = "2021"

[dependencies]
celesteloader = "0.1"
celesterender = "0.1"
celestedebugrc = "0.1"
annotate_celeste_map = "0.1"

slint = { version = "1.5", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
rfd = { version = "0.14.0", default-features = false, features = ["xdg-portal", "tokio"] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
opener = "0.6.1"
notify-debouncer-full = { version = "0.3", default-features = false }

anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.2"
chrono = "0.4"
once_cell = "1.19"

[build-dependencies]
slint-build = "1.5.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = "symbols"
