[package]
name = "atlas"
description = "Render and visualize paths for Celeste TASes"
license = "MIT"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
version = "1.3.1"
edition = "2021"

[dependencies]
celesteloader = "0.5"
celesterender = "0.5"
celestedebugrc = "0.5"
annotate_celeste_map = "0.5"

copypasta = "0.10"
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
opener = "0.8"
notify-debouncer-full = { version = "0.6", default-features = false }
gix = { version = "0.73", default-features = false }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.2"
chrono = "0.4"
tempfile = "3.10"
fastrand = "2.0"
toml = "0.9"
dirs = "6.0"

[target.'cfg(windows)'.dependencies]
slint = { version = "1.5", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-skia",
] }
[target.'cfg(not(windows))'.dependencies]
slint = { version = "1.5", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }

[build-dependencies]
slint-build = "1.5.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = "symbols"

[package.metadata.bundle]
name = "Atlas"
identifier = "io.github.jakobhellermann.atlas"
icon = ["ui/assets/icon/icon_128.png"]

[lints.clippy]
manual_flatten = "allow"
type_complexity = "allow"

# [patch.crates-io]
# celesteloader = { path = "../celestetools/crates/celesteloader" }
# celesterender = { path = "../celestetools/crates/celesterender" }
# celestedebugrc = { path = "../celestetools/crates/celestedebugrc" }
# annotate_celeste_map = { path = "../celestetools/crates/annotate_celeste_map" }
